--- a/playground.ipynb
+++ b/playground.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,23 +73,34 @@
     "    if year < 1990:\n",
     "        return 'Classic'\n",
     "    else:\n",
-    "        return 'Recent'\n",
+    "        return 'Modern'\n",
     "\n",
     "df['Release_Category'] = df['Released_Year'].apply(map_release_year)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "/var/folders/9z/z5y12ys519b6mzy4vxjkssc80000gn/T/ipykernel_57423/713252548.py:1: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "  df['Runtime_int'] = df['Runtime'].str.extract('(\\d+)').astype(float)\n"
+     ]
+    }
+   ],
    "source": [
     "df['Runtime_int'] = df['Runtime'].str.extract('(\\d+)').astype(float)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +119,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final.to_csv('cleaned_movies.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +155,272 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Poster_Link</th>\n",
+       "      <th>Series_Title</th>\n",
+       "      <th>Overview</th>\n",
+       "      <th>Director</th>\n",
+       "      <th>Release_Category</th>\n",
+       "      <th>Runtime_int</th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>IMDB_Rating</th>\n",
+       "      <th>Normalized_Meta_Score</th>\n",
+       "      <th>Normalized_Certificate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>https://m.media-amazon.com/images/M/MV5BMDFkYT...</td>\n",
+       "      <td>The Shawshank Redemption</td>\n",
+       "      <td>Two imprisoned men bond over a number of years...</td>\n",
+       "      <td>Frank Darabont</td>\n",
+       "      <td>Recent</td>\n",
+       "      <td>142.0</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>https://m.media-amazon.com/images/M/MV5BM2MyNj...</td>\n",
+       "      <td>The Godfather</td>\n",
+       "      <td>An organized crime dynasty's aging patriarch t...</td>\n",
+       "      <td>Francis Ford Coppola</td>\n",
+       "      <td>Classic</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>Crime, Drama</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>https://m.media-amazon.com/images/M/MV5BMTMxNT...</td>\n",
+       "      <td>The Dark Knight</td>\n",
+       "      <td>When the menace known as the Joker wreaks havo...</td>\n",
+       "      <td>Christopher Nolan</td>\n",
+       "      <td>Recent</td>\n",
+       "      <td>152.0</td>\n",
+       "      <td>Action, Crime, Drama</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>Family-Friendly</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>https://m.media-amazon.com/images/M/MV5BMWMwMG...</td>\n",
+       "      <td>The Godfather: Part II</td>\n",
+       "      <td>The early life and career of Vito Corleone in ...</td>\n",
+       "      <td>Francis Ford Coppola</td>\n",
+       "      <td>Classic</td>\n",
+       "      <td>202.0</td>\n",
+       "      <td>Crime, Drama</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>https://m.media-amazon.com/images/M/MV5BMWU4N2...</td>\n",
+       "      <td>12 Angry Men</td>\n",
+       "      <td>A jury holdout attempts to prevent a miscarria...</td>\n",
+       "      <td>Sidney Lumet</td>\n",
+       "      <td>Classic</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>Crime, Drama</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>Family-Friendly</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>https://m.media-amazon.com/images/M/MV5BNGEwMT...</td>\n",
+       "      <td>Breakfast at Tiffany's</td>\n",
+       "      <td>A young New York socialite becomes interested ...</td>\n",
+       "      <td>Blake Edwards</td>\n",
+       "      <td>Classic</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>Comedy, Drama, Romance</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>Adult</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>https://m.media-amazon.com/images/M/MV5BODk3Yj...</td>\n",
+       "      <td>Giant</td>\n",
+       "      <td>Sprawling epic covering the life of a Texas ca...</td>\n",
+       "      <td>George Stevens</td>\n",
+       "      <td>Classic</td>\n",
+       "      <td>201.0</td>\n",
+       "      <td>Drama, Western</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>Family-Friendly</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>https://m.media-amazon.com/images/M/MV5BM2U3Yz...</td>\n",
+       "      <td>From Here to Eternity</td>\n",
+       "      <td>In Hawaii in 1941, a private is cruelly punish...</td>\n",
+       "      <td>Fred Zinnemann</td>\n",
+       "      <td>Classic</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>Drama, Romance, War</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>Family-Friendly</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>https://m.media-amazon.com/images/M/MV5BZTBmMj...</td>\n",
+       "      <td>Lifeboat</td>\n",
+       "      <td>Several survivors of a torpedoed merchant ship...</td>\n",
+       "      <td>Alfred Hitchcock</td>\n",
+       "      <td>Classic</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>Drama, War</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>Unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>https://m.media-amazon.com/images/M/MV5BMTY5OD...</td>\n",
+       "      <td>The 39 Steps</td>\n",
+       "      <td>A man in London tries to help a counter-espion...</td>\n",
+       "      <td>Alfred Hitchcock</td>\n",
+       "      <td>Classic</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>Crime, Mystery, Thriller</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>Unknown</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           Poster_Link  \\\n",
+       "0    https://m.media-amazon.com/images/M/MV5BMDFkYT...   \n",
+       "1    https://m.media-amazon.com/images/M/MV5BM2MyNj...   \n",
+       "2    https://m.media-amazon.com/images/M/MV5BMTMxNT...   \n",
+       "3    https://m.media-amazon.com/images/M/MV5BMWMwMG...   \n",
+       "4    https://m.media-amazon.com/images/M/MV5BMWU4N2...   \n",
+       "..                                                 ...   \n",
+       "995  https://m.media-amazon.com/images/M/MV5BNGEwMT...   \n",
+       "996  https://m.media-amazon.com/images/M/MV5BODk3Yj...   \n",
+       "997  https://m.media-amazon.com/images/M/MV5BM2U3Yz...   \n",
+       "998  https://m.media-amazon.com/images/M/MV5BZTBmMj...   \n",
+       "999  https://m.media-amazon.com/images/M/MV5BMTY5OD...   \n",
+       "\n",
+       "                 Series_Title  \\\n",
+       "0    The Shawshank Redemption   \n",
+       "1               The Godfather   \n",
+       "2             The Dark Knight   \n",
+       "3      The Godfather: Part II   \n",
+       "4                12 Angry Men   \n",
+       "..                        ...   \n",
+       "995    Breakfast at Tiffany's   \n",
+       "996                     Giant   \n",
+       "997     From Here to Eternity   \n",
+       "998                  Lifeboat   \n",
+       "999              The 39 Steps   \n",
+       "\n",
+       "                                              Overview              Director  \\\n",
+       "0    Two imprisoned men bond over a number of years...        Frank Darabont   \n",
+       "1    An organized crime dynasty's aging patriarch t...  Francis Ford Coppola   \n",
+       "2    When the menace known as the Joker wreaks havo...     Christopher Nolan   \n",
+       "3    The early life and career of Vito Corleone in ...  Francis Ford Coppola   \n",
+       "4    A jury holdout attempts to prevent a miscarria...          Sidney Lumet   \n",
+       "..                                                 ...                   ...   \n",
+       "995  A young New York socialite becomes interested ...         Blake Edwards   \n",
+       "996  Sprawling epic covering the life of a Texas ca...        George Stevens   \n",
+       "997  In Hawaii in 1941, a private is cruelly punish...        Fred Zinnemann   \n",
+       "998  Several survivors of a torpedoed merchant ship...      Alfred Hitchcock   \n",
+       "999  A man in London tries to help a counter-espion...      Alfred Hitchcock   \n",
+       "\n",
+       "    Release_Category  Runtime_int                     Genre  IMDB_Rating  \\\n",
+       "0             Recent        142.0                     Drama          9.3   \n",
+       "1            Classic        175.0              Crime, Drama          9.2   \n",
+       "2             Recent        152.0      Action, Crime, Drama          9.0   \n",
+       "3            Classic        202.0              Crime, Drama          9.0   \n",
+       "4            Classic         96.0              Crime, Drama          9.0   \n",
+       "..               ...          ...                       ...          ...   \n",
+       "995          Classic        115.0    Comedy, Drama, Romance          7.6   \n",
+       "996          Classic        201.0            Drama, Western          7.6   \n",
+       "997          Classic        118.0       Drama, Romance, War          7.6   \n",
+       "998          Classic         97.0                Drama, War          7.6   \n",
+       "999          Classic         86.0  Crime, Mystery, Thriller          7.6   \n",
+       "\n",
+       "     Normalized_Meta_Score Normalized_Certificate  \n",
+       "0                      8.0                  Adult  \n",
+       "1                     10.0                  Adult  \n",
+       "2                      8.4        Family-Friendly  \n",
+       "3                      9.0                  Adult  \n",
+       "4                      9.6        Family-Friendly  \n",
+       "..                     ...                    ...  \n",
+       "995                    7.6                  Adult  \n",
+       "996                    8.4        Family-Friendly  \n",
+       "997                    8.5        Family-Friendly  \n",
+       "998                    7.8                Unknown  \n",
+       "999                    9.3                Unknown  \n",
+       "\n",
+       "[1000 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +494,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_genres = df['Genre'].dropna().str.split(',').explode().str.strip().unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Poster_Link', 'Series_Title', 'Overview', 'Director',\n",
+       "       'Release_Category', 'Runtime_int', 'Genre', 'IMDB_Rating',\n",
+       "       'Normalized_Meta_Score', 'Normalized_Certificate'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
